--- a/AUG-ADO_NET_DEMO/AUG-ADO_NET_DEMO.csproj
+++ b/AUG-ADO_NET_DEMO/AUG-ADO_NET_DEMO.csproj
@@ -122,6 +122,7 @@
     <Content Include="Demos.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Notes.txt" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
