--- a/AUG-ADO_NET_DEMO/Web.config
+++ b/AUG-ADO_NET_DEMO/Web.config
@@ -5,7 +5,11 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="csTOtest" connectionString="Data Source=MLBSRL1-106854;Database=test;Integrated Security=True;Connect Timeout=30;"/>
+    <add name="csTOtest" connectionString="Data Source=MLBSRL1-106854;Database=test;Integrated Security=True;Connect Timeout=30;" />
+    <add name="testConnectionString" connectionString="Data Source=MLBSRL1-106854;Initial Catalog=test;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="testConnectionString2" connectionString="Data Source=MLBSRL1-106854;Initial Catalog=test;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
